--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
 
 }
+.toolbar-background-md {
+  border-color: #074d86;
+  background: #074d86;
+  color:white;
+}
+
+.toolbar-title-md {
+  color: white;
+}
