add departement views

--- a/src/pages/departement/departement.scss
+++ b/src/pages/departement/departement.scss
@@ -1,4 +1,4 @@
-page-home {
+page-departement {
   .item-md {
     margin-bottom: 5px;
     border-bottom: solid;
@@ -6,13 +6,4 @@ page-home {
   }
 
   ion-item-sliding .item { border-bottom-color: #074d86; }
-}
-.toolbar-background-md {
-  border-color: #074d86;
-  background: #074d86;
-  color:white;
-}
-
-.toolbar-title-md {
-  color: white;
 }
