--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,17 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.searchbar-md  {
+
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.searchbar-md .searchbar-input{
+  border-radius: 24px;
+}
+.myTitle{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+}
