add enseignement views

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -28,3 +28,6 @@
   text-align: center;
   font-family: 'Raleway', sans-serif;
 }
+.editBtn{background-color: #00BCD4;padding-top: 5px !important;}
+.deleteBtn{background-color: #FF5722;padding-top: 5px !important;}
+
