--- a/src/pages/departement/departement.scss
+++ b/src/pages/departement/departement.scss
@@ -3,6 +3,7 @@ page-departement {
     margin-bottom: 5px;
     border-bottom: solid;
     border-bottom-width: 1px;
+    height: 80px;
   }
 
   ion-item-sliding .item { border-bottom-color: #074d86; }
