--- a/src/pages/enseignement/enseignement.scss
+++ b/src/pages/enseignement/enseignement.scss
@@ -1,9 +1,8 @@
-page-matiere {
+page-enseignement {
   .item-md {
     margin-bottom: 5px;
     border-bottom: solid;
     border-bottom-width: 1px;
-    height: 80px;
   }
 
   ion-item-sliding .item { border-bottom-color: #074d86; }
