--- a/src/pages/enseignant/enseignant.scss
+++ b/src/pages/enseignant/enseignant.scss
@@ -1,3 +1,10 @@
 page-enseignant {
+  .item-md {
+    margin-bottom: 5px;
+    border-bottom: solid;
+    border-bottom-width: 1px;
+    height: 80px;
+  }
 
+  ion-item-sliding .item { border-bottom-color: #074d86; }
 }
