add menu icon and enable swipe back

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,7 @@
   <ion-content >
     <ion-list >
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-icon name="{{p.icon}}" outline style="margin-right: 7px"></ion-icon>
         {{p.title}}
       </button>
     </ion-list>
@@ -15,5 +16,5 @@
 
 </ion-menu>
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" #content swipeBackEnabled="true"></ion-nav>
 
